Back to Neuenhof!

--- a/main.ipynb
+++ b/main.ipynb
@@ -1051,7 +1051,7 @@
     "\n",
     "        # Tell pytorch to switch back to training-mode:    \n",
     "        model.train()\n",
-    "    \n",
+    "    wandb.log({\"Epochs until training done\":i})\n",
     "    print(f'epoch: {i:3} loss: {single_loss.item():10.10f}')\n",
     "\n",
     "    return train_losses, test_losses, test_scores\n",
