--- a/main.ipynb
+++ b/main.ipynb
@@ -1132,7 +1132,7 @@
     "- EPOCHS: How many epochs should be used for training.\n",
     "- MAX_EPOCHS_NO_IMPROVE: How many epochs can pass with no improvements.\n",
     "\n",
-    "### Bestmögliches Modell ohne Regularisierung, ohne Batchnorm und SGD als Optimizer\n",
+    "## Bestmögliches Modell ohne Regularisierung, ohne Batchnorm und SGD als Optimizer\n",
     "Wir finden nun das bestmögliche NN ohne Regularisierung, ohne Batchnorm und SGD als Optimizer mit Bayesian Optimization. Zur Optimieren benutzen wir [WandB](https://wandb.ai/), welches ein tolles und übersichtliches Tool zur Verfügung stellen. Mit \"Sweepen\" ist \"Parameter testen und schauen, welche am besten sind\". [Hier](https://docs.wandb.ai/guides/sweeps) gibt es eine Anleitung dazu.\n",
     "\n",
     "Als Optimierungsmethode benutzen wir \"Bayes\", welches nach dem \"Bayesianisches Prinzip\" schlau Parameter durchtested. [Hier](https://wandb.ai/site/articles/bayesian-hyperparameter-optimization-a-primer) gibt es eine gute Übersicht."
@@ -2468,18 +2468,18 @@
   },
   {
    "source": [
-    "### Ergebniss\n",
+    "## Resultat \"Bestmögliches Modell ohne Regularisierung, ohne Batchnorm und SGD als Optimizer\"\n",
     "Das Ergebiss kann hier nachgeschaut werden:\n",
     "\n",
-    "https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-ohne-Regularisierung-ohne-Batchnorm-und-SGD-als-Optimizer--Vmlldzo2NzcyNjQ/"
+    "https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-ohne-Regularisierung-ohne-Batchnorm-und-SGD-als-Optimizer--Vmlldzo2ODc4MDk"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "### Bestmögliches Modell mit Dropout oder L1/L2 Regularisation, ohne Batchnorm und SGD als Optimizer\n",
-    "#### Warum Regularisieren?\n",
+    "## Bestmögliches Modell mit Dropout oder L1/L2 Regularisation, ohne Batchnorm und SGD als Optimizer\n",
+    "### Warum Regularisieren?\n",
     "Der Sinn der regularisierung ist, Overfitting zu verhindern. Dropout tut dies, in dem es einen gewissen %-Satz pro Layer auf 0 setzt. Bei der L1/L2 Regularisierung wird dagegen die absolute oder quadrierte Norm der Gewichte zum Loss hinzuaddiert. Somit verändert sich der Gradient, welcher die Gewichte anpasst. Dies funktioniert, da im Allgemeinen grosse Gewichte auf Overfitting hindeuten und grosse Gewichte werden durch beide L-Regularisierungen bestraft. \n",
     "\n",
     "Der Unterschied zwischen L1 und L2 ist, dass bei L1, da man den absoluten Wert nimmt zum summieren, mehr 0 gesetzt. Bei der L2, da die Gewichte quadiert werden und die Quadrierung kleine Werte noch kleiner macht, werden die Gewichte einfach verkleinert, aber werden nicht 0 gesetzt."
@@ -3862,10 +3862,11 @@
   },
   {
    "source": [
-    "### Ergebniss\n",
+    "## Resultat \"Bestmögliches Modell mit Dropout oder L1/L2 Regularisation, ohne Batchnorm und SGD als Optimizer\"\n",
+    "\n",
     "Das Ergebiss kann hier nachgeschaut werden:\n",
     "\n",
-    "https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-mit-Regularisierung-ohne-Batchnorm-und-SGD-als-Optimizer--Vmlldzo2Nzc1NzA"
+    "https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-mit-Regularisierung-ohne-Batchnorm-und-SGD-als-Optimizer--Vmlldzo2ODc4ODM"
    ],
    "cell_type": "markdown",
    "metadata": {
@@ -3874,7 +3875,7 @@
   },
   {
    "source": [
-    "### Bestmögliches Modell ohne Regularisierung, mit Batchnorm und SGD als Optimizer"
+    "## Bestmögliches Modell ohne Regularisierung, mit Batchnorm und SGD als Optimizer"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -5214,8 +5215,8 @@
   },
   {
    "source": [
-    "### Resultate\n",
-    "Die Resulate findet man hier: https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-ohne-Regularisierung-mit-Batchnorm-und-SGD-als-Optimizer--Vmlldzo2Nzc2Njk"
+    "## Resultat \"Bestmögliches Modell ohne Regularisierung, mit Batchnorm und SGD als Optimizer\"\n",
+    "Die Resulate findet man hier: https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-ohne-Regularisierung-mit-Batchnorm-und-SGD-als-Optimizer--Vmlldzo2ODc3MjY/"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -6621,18 +6622,11 @@
   },
   {
    "source": [
-    "### Resultate\r\n",
-    "Das Ergebniss ist schlechter. Ebenfalls sieht man, dass die F1-Test Score pro Epoche starkt schwankt."
+    "### Resultate\n",
+    "Das Resultat kann man hier nachlesen: https://wandb.ai/vincenzo293/DEL-mini-challenge-1/reports/Bestm-gliches-Modell-mit-Dropout-oder-L1-L2-Regularisation-ohne-Batchnorm-und-Adam-als-Optimizer--Vmlldzo2ODc2OTg"
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
