Ready for turn-in.

--- a/main.ipynb
+++ b/main.ipynb
@@ -888,31 +888,7 @@
     "                    nn.init.constant_(m.weight, 1)\n",
     "                    nn.init.constant_(m.bias, 0)\n",
     "\n",
-    "    return Model(input_dim, output_dim, nr_layers, hdim, dropout, batchnorm, reg)\n",
-    "\n",
-    "def plot_confusion_matrix(cm, classes, normalize=False, title='Confusion matrix', cmap=plt.cm.Blues):\n",
-    "    if normalize:\n",
-    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
-    "        print(\"Normalized confusion matrix\")\n",
-    "    else:\n",
-    "        print('Confusion matrix, without normalization')\n",
-    "\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "    tick_marks = np.arange(len(classes))\n",
-    "    plt.xticks(tick_marks, classes, rotation=45)\n",
-    "    plt.yticks(tick_marks, classes)\n",
-    "\n",
-    "    fmt = '.2f' if normalize else 'd'\n",
-    "    thresh = cm.max() / 2.\n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j, i, format(cm[i, j], fmt), horizontalalignment=\"center\", color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
-    "    return plt"
+    "    return Model(input_dim, output_dim, nr_layers, hdim, dropout, batchnorm, reg)"
    ]
   },
   {
@@ -6629,18 +6605,25 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Vergleich aller Methoden\n",
+    "Das beste Modell wurde mit Hilfe von Stochastic Gradient Descent und Batchnorm pro Hidden Layer gefunden. Interessanterweise war, dass, obwohl es keine Regularisierung gab, das Ergebniss nicht (oder kaum) overfitted war. Dies sehen wir daran, dass das Early Stopping nie oder kaum stattgefunden hat. Würde man das Modell weiter trainieren, ist wohl zu erwarten, dass sich das Ergebniss verbessert.\n",
+    "### Vergleich mit dem LightGBM-Modell\n",
+    "Das LightGBM-Modell hat eine F1-Score von 0.46 erreicht. Das beste Modell bei uns hat 0.3855 erreicht.\n",
+    "### Ausblick\n",
+    "Mit mehr Neuronen und mehr Hidden Layers könnte man das Ergebniss wohl verbessern. Ob man da aber auf die selbe Qualität kommt wie das LightGBM ist unklar."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Da"
+   ]
   }
  ]
 }
